kubernetes/dev/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: envoy

spec:
  selector:
    app: envoy

  type: LoadBalancer
  ports:
    - name: https-envoy
      protocol: TCP
      port: 443
      targetPort: 8080

---

apiVersion: v1
kind: Service

metadata:
  name: todo-api

spec:
  selector:
    app: todo-api

  type: ClusterIP
  ports:
    - name: http-todo-api
      protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Service

metadata:
  name: user-api

spec:
  selector:
    app: user-api

  type: ClusterIP
  ports:
    - name: http-user-api
      protocol: TCP
      port: 80
      targetPort: 8080
